# cpp_lr1

./: CMakeLists.txt  main.cpp
lib/: bgiout.cpp  dibapi.h  dibutil.cpp  dibutil.h  drawing.cpp  file.cpp  graphics.h  misc.cpp  mouse.cpp  palette.cpp  text.cpp  winbgi.cpp  winbgi.h  winbgitypes.h  winthread.cpp
